Diagramme in der customer-page

--- a/Project/electricity-provider/templates/ui_customer_page.html
+++ b/Project/electricity-provider/templates/ui_customer_page.html
@@ -6,6 +6,9 @@ Login
 
 
 {% block header_logged_in %}
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="/">
@@ -53,23 +56,100 @@ Login
 
                 <div class="collapse" id="collapseExample">
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col" style="margin-left: 200px;">
-                                Vetragsinhaber: <br>
-                                Vertragsdauer: <br>
-                                Kosten: <br>
-                                Address: <br><br><br>
-                                Rechnungsadresse: <br><br><br>
-                                Bankdaten: 
-                            </div>
-                            <div class="col">
-                                contract.contract_owner <br>
-                                contract.contract_duration <br>
-                                contract.costs <br>
-                                contract.address <br><br><br>
-                                contract.invoice_address <br><br><br>
-                                contract.bank_data
-                        </div>
+
+                        <!-- Erstes Diagramm: Montasansicht -->
+                        <canvas id="myLineChart1" style="width:100%; height: 100px;"></canvas>
+                        <script>
+
+                            const values = {{ messwerte|safe }}
+
+                            var ctx1 = document.getElementById('myLineChart1').getContext('2d');
+                            var myLineChart1 = new Chart(ctx1, {
+                                type: 'line',
+                                data: {
+                                    labels: values.map(messwert => {
+                                        let date = new Date(messwert.timestamp);
+                                        return date.toLocaleDateString('de-DE') + ' - ' + date.toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' });
+                                    }),                                                             
+                                    datasets: [{
+                                        label: 'Stromverbrauch in kW/h',
+                                        data: values.map(messwert => messwert.value),
+                                        borderColor: 'rgba(175, 235, 173)',
+                                        backgroundColor: 'rgba(175, 235, 173, 0.5)',
+                                        fill: true
+                                    }]
+                                },
+                                options: {
+                                    plugins: {
+                                        title: {
+                                            display: true,
+                                            text: 'Monatsansicht',
+                                            position: 'top',
+                                            font: {
+                                                size: 20, 
+                                            },
+                                        },
+                                    },
+                                    responsive: true,
+                                    scales: {
+                                        y: {
+                                            beginAtZero: true,
+                                            ticks: {
+                                                stepSize: 200,
+                                                min: 0,
+                                                max: 18
+                                            }
+                                        }
+                                    },  
+                                }
+                            });
+                        </script>
+
+                        <!-- Zweites Diagramm -->
+                        <canvas id="myLineChart2" style="width:100%; height: 100px;"></canvas>
+                        <script>
+                            var ctx2 = document.getElementById('myLineChart2').getContext('2d');
+                            var myLineChart2 = new Chart(ctx2, {
+                                type: 'line',
+                                data: {
+                                    labels: values.map(messwert => {
+                                        let date = new Date(messwert.timestamp);
+                                        return date.toLocaleDateString('de-DE') + ' - ' + date.toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' });
+                                    }),                                                             
+                                    datasets: [{
+                                        label: 'Stromverbrauch in kW/h',
+                                        data: values.map(messwert => messwert.value),
+                                        borderColor: 'rgba(175, 235, 173)',
+                                        backgroundColor: 'rgba(175, 235, 173, 0.5)',
+                                        fill: true
+                                    }]
+                                },
+                                options: {
+                                    plugins: {
+                                        title: {
+                                            display: true,
+                                            text: 'Tagesansicht',
+                                            position: 'top',
+                                            font: {
+                                                size: 20, 
+                                            },
+                                        },
+                                    },
+                                    responsive: true,
+                                    scales: {
+                                        y: {
+                                            beginAtZero: true,
+                                            ticks: {
+                                                stepSize: 200,
+                                                min: 0,
+                                                max: 18
+                                            }
+                                        }
+                                    },  
+                                }
+                            });
+                        </script>
+                        
                     </div>
                 </div>
 
