--- a/Project/electricity-provider/templates/ui_login_page.html
+++ b/Project/electricity-provider/templates/ui_login_page.html
@@ -42,7 +42,7 @@ Login
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="row">
         <div class="col-12 col-md-14"> <!-- Adjusted the column size for a wider frame -->
-            <div class="card p-4 bg-light">
+            <div class="card p-4 bg-light" style="width: calc(100% + 150px);>
                 <form id="loginForm" method="POST" action="http://localhost:8000/api/v1/auth/">
                     <h2 class="text-center mb-4">Login</h2>
                     {% csrf_token %}
