--- a/Project/electricity-provider/templates/ui_register_page.html
+++ b/Project/electricity-provider/templates/ui_register_page.html
@@ -35,35 +35,35 @@ Register
 
 {% block body %}
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="row">
-        <div class="col-12 col-md-14"> <!-- Adjust the size as needed -->
-            <div class="card p-4 bg-light">
-                <form id="registerForm" method="POST" action="http://localhost:8000/api/v1/register/">
-                    <h2 class="text-center mb-4">Registrierung</h2>
-                    {% csrf_token %}
-                    <div class="mb-3">
-                        <label for="first_name" class="form-label">Vorname:</label>
-                        <input type="text" class="form-control" id="first_name" name="first_name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="last_name" class="form-label">Nachname:</label>
-                        <input type="text" class="form-control" id="last_name" name="last_name">
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email:</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Passwort:</label>
-                        <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                    <div class="d-grid">
-                        <input type="submit" class="btn btn-primary" value="Submit">
-                    </div>
-                </form>
-            </div>
-        </div>
+  <div class="row">
+    <div class="col-12 col-md-14"> <!-- Adjust the size as needed -->
+      <div class="card p-4 bg-light" style="width: calc(100% + 170px);">
+        <form id="registerForm" method="POST" action="http://localhost:8000/api/v1/register/">
+          <h2 class="text-center mb-4">Registrierung</h2>
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="first_name" class="form-label">Firstname:</label>
+            <input type="text" class="form-control" id="first_name" name="first_name">
+          </div>
+          <div class="mb-3">
+            <label for="last_name" class="form-label">Lastname:</label>
+            <input type="text" class="form-control" id="last_name" name="last_name">
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" class="form-control" id="email" name="email">
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="password" name="password">
+          </div>
+          <div class="d-grid">
+            <input type="submit" class="btn btn-primary" value="Submit">
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </div>
 
 
