--- a/Project/electricity-provider/templates/ui_new_contract_page.html
+++ b/Project/electricity-provider/templates/ui_new_contract_page.html
@@ -75,7 +75,7 @@ Login
 
         <div class="row align-items-start mt-md" style="border-bottom: 2px solid #DFDFDF;">
           <div class="col-12" style="margin-left: 80px;">
-            <h5>Sendeadresse</h5>
+            <h5>Adresse</h5>
           </div>
           <div class="col" style="margin-left: 100px;">
             <label for="street" class="mb-md fixed-height">Straße/</label>
