--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -72,7 +72,7 @@ Login
 
 
 <div class="d-flex justify-content-center" style="margin-top: 20px;">
-  <a type="button" class="btn btn-primary" href="/contract/new/">Neuen Vertrag anlegen</a>
+  <a type="button" class="btn btn-primary" href="/contract/new/">Create Contract</a>
 </div>
 
 {% for contract in contracts %}
