--- a/Project/electricity-provider/templates/ui_contract_page.html
+++ b/Project/electricity-provider/templates/ui_contract_page.html
@@ -136,6 +136,7 @@ Login
 
                   <div class="row">
                     <div class="col" style="text-align: center;">
+                      <a type="button" class="btn btn-primary" href="/customer/">Create Contract</a>
                       <button type="button" id="cancelContract" data-contract-id="{{ contract.id }}" class="btn btn-danger">Cancel Contract</button>
                     </div>
                   </div>
